--- a/_publications/2024-04-14-diffusion-4.md
+++ b/_publications/2024-04-14-diffusion-4.md
@@ -1,12 +1,12 @@
 ---
-title: "Paper Title Number 4"
+title: "Enhancing the Domain Robustness of Self-Supervised Pre-Training with Synthetic Images"
 collection: publications
 category: conferences
-permalink: /publication/2024-02-17-paper-title-number-4
-excerpt: 'This paper is about fixing template issue #693.'
-date: 2024-02-17
-venue: 'GitHub Journal of Bugs'
-paperurl: 'http://academicpages.github.io/files/paper3.pdf'
+permalink: 
+excerpt: 
+date: 2024-04-14
+venue: 'ICASSP 2024'
+paperurl: 'https://ieeexplore.ieee.org/document/10447665'
 citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
 
