--- a/_publications/2024-04-14-diffusion-4.md
+++ b/_publications/2024-04-14-diffusion-4.md
@@ -7,7 +7,7 @@ excerpt:
 date: 2024-04-14
 venue: 'ICASSP 2024'
 paperurl: 'https://ieeexplore.ieee.org/document/10447665'
-citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
+citation: 'M. H. N. C, A. Bhattacharya, V. G. Turrisi Da Costa, B. Banerjee and E. Ricci, "Enhancing the Domain Robustness of Self-Supervised pre-Training with Synthetic Images," ICASSP 2024 - 2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), Seoul, Korea, Republic of, 2024, pp. 5470-5474, doi: 10.1109/ICASSP48485.2024.10447665.'
 ---
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+We present a novel method for improving the adaptability of self-supervised (SSL) pre-trained models across different domains. Our approach uses synthetic images that are generated using an auxiliary diffusion model, namely InstructPix2Pix. More specifically, starting from a real image, we prompt the diffusion model to generate synthetic versions of that image in the style of the target domains. This allows us to generate a diverse set of multi-domain images that share the same semantics as real images. Integrating these synthetic images into the training dataset enhances the model’s capacity to generalize to other domains. We pre-trained different SSL methods on Imagenet-100 with and without the synthetic images and evaluated their performance on three multi-domain datasets, DomainNet, PACS, and Office-Home. Our results show significant improvements in all datasets and methods, encouraging new research in the direction of leveraging synthetic data to improve the robustness of pre-trained models.
