--- a/_publications/2024-04-14-diffusion-1.md
+++ b/_publications/2024-04-14-diffusion-1.md
@@ -5,7 +5,7 @@ category: conferences
 permalink: 
 excerpt: 
 date: 2024-04-14
-venue: 'ICASSP 2024'
+venue: 'ICASSP'
 paperurl: 'https://ieeexplore.ieee.org/document/10447665'
 citation: 'M. H. N. C, A. Bhattacharya, V. G. Turrisi Da Costa, B. Banerjee and E. Ricci, "Enhancing the Domain Robustness of Self-Supervised pre-Training with Synthetic Images," ICASSP 2024 - 2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), Seoul, Korea, Republic of, 2024, pp. 5470-5474, doi: 10.1109/ICASSP48485.2024.10447665.'
 ---
