--- a/_publications/2024-12-13-icvgip-2.md
+++ b/_publications/2024-12-13-icvgip-2.md
@@ -5,7 +5,7 @@ category: conferences
 permalink: 
 excerpt: 
 date: 2024-12-13
-venue: 'ICVGIP 2024'
+venue: 'ICVGIP'
 paperurl: 'https://dl.acm.org/doi/10.1145/3702250.3702265'
 citation: "Mohamad Hassan N C, Ankit Jha, Moloud Abdar, and Biplab Banerjee. 2025. Can Commonsense Knowledge Improve CLIP's Performance in Cross-Domain VQA?✱ In Proceedings of the Fifteenth Indian Conference on Computer Vision Graphics and Image Processing (ICVGIP ' 24). Association for Computing Machinery, New York, NY, USA, Article 15, 1–10. https://doi.org/10.1145/3702250.370226"
 ---
